<resources>
    <string name="default_feature_bar_options">Options</string>
    <string name="default_feature_bar_back">Back</string>
    <string name="default_feature_bar_center">Select</string>
    <string name="recent_kill_level">1</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="device_info_default">Unknown</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="wifi_display_settings_title">Cast screen</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_poor_network_detection">Avoid poor connections</string>
    <string name="wifi_poor_network_detection_summary">"Don't use a Wi‑Fi network unless it has a good Internet connection"</string>
    <string name="wifi_scan_always_available">Scanning always available</string>
    <string name="wifi_scan_always_available_summary">"Let Google's location service and other apps scan for networks, even when Wi-Fi is off"</string>
    <string name="wifi_install_credentials">Install certificates</string>
    <string name="wifi_setting_sleep_policy_title">Keep Wi‑Fi on during sleep</string>
    <string name="wifi_advanced_titlebar">Advanced Wi‑Fi</string>
    <string name="wifi_setting_frequency_band_title">Wi‑Fi frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="touch_light_timeout">Keypad light</string>
    <string name="touch_light_timeout_title">Keypad light time</string>
    <string name="touch_light_timeout_summary">After %1$s seconds of inactivity</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Daydream</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Mocor version</string>
    <string name="model_number">Model number</string>
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Software Build number</string>
    <string name="selinux_status">SELinux status</string>
    <string name="device_info_not_available">Not available</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="status_wifi_mac_address">Wi‑Fi MAC address</string>
    <string name="status_ims_registration">IMS Registration Status</string>
    <string name="status_ims_not_registered">Not registered</string>
    <string name="status_bt_address">Bluetooth address</string>
    <string name="status_serial_number">Serial number</string>
    <string name="status_up_time">Up time</string>
    <string name="storage_title_usb">USB computer connection</string>
    <string name="usb_mtp_title">Media device (MTP)</string>
    <string name="usb_mtp_summary">Lets you transfer media files on Windows, or using Mocor5 File Transfer on Mac</string>
    <string name="usb_ptp_title">Camera (PTP)</string>
    <string name="usb_ptp_summary">"Lets you transfer photos using camera software, and transfer any files on computers that don't support MTP"</string>
    <string name="battery_status_title">Battery status</string>
    <string name="battery_level_title">Battery level</string>
    <string name="usb_tethering_button_text">USB tethering</string>
    <string name="gps_config_titlebar">GPS config</string>
    <string name="gps_config_supl_host">SUPL server address</string>
    <string name="gps_config_supl_port">SUPL server port</string>
    <string name="gps_config_cert_path">SUPL cert file path</string>
    <string name="gps_config_location_method">Preferred method</string>
    <string name="agps_enable_option_tailebar">AGPS enable option</string>
    <string name="agps_enable_option_registered">Registered network</string>
    <string name="agps_enable_option_all">All networks</string>
    <string name="agps_enable_option_none">Do not use AGPS</string>
    <string name="agps_enable_default_set_text">Clicking for restore the default settings.</string>
    <string name="agps_enable_default_set_button">Default settings</string>
    <string name="agps_config_help_tailebar">AGPS help</string>
    <string name="agps_config_help_text">Using AGPS will generate international roaming fees if you selected All networks in AGPS enable option, when your phone is international roaming.</string>
    <string name="settings_other">Other</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="applications_settings">Apps</string>
    <string name="filter_apps_all">All</string>
    <string name="filter_apps_disabled">Disabled</string>
    <string name="filter_apps_third_party">Downloaded</string>
    <string name="filter_apps_running">Running</string>
    <string name="filter_apps_onsdcard">On SD card</string>
    <string name="pointer_settings_category">Mouse/trackpad</string>
    <string name="pointer_speed">Pointer speed</string>
    <string name="status_wimax_mac_address">4G MAC address</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="recovery_update_title">System software update</string>
    <string name="mobile_to_wlan_policy_title">Wi-Fi Connection Policy Settings</string>
    <string name="mobile_to_wlan_policy_category">Choose Network Dialog</string>
    <string name="hardware_version">Hardware Version</string>
    <string name="font_setting_title">Font</string>
    <string name="usb_charge_only">Charge only</string>
    <string name="usb_charge_only_summary">Use charge only mode when USB connected</string>
    <string name="usb_storage">USB storage</string>
    <string name="usb_storage_summary">Enable USB mass storage</string>
    <string name="usb_virtual_drive">USB virtual drive</string>
    <string name="usb_virtual_drive_summary">Enable USB virtual drive</string>
    <string name="remember_choice">Remember my choice</string>
    <string name="remember_choice_summary">Remember my choice and start the remembered function automatically next time</string>
    <string name="simslotcfg_title">WCDMA card settings</string>
    <string name="simslotcfg_sub_summary">Choose WCDMA card, need reboot!</string>
    <string name="show_dialog_connect_to_cmcc_title">Connected prompt</string>
    <string name="show_dialog_connect_to_cmcc_summary">Display connected to the CMCC prompt</string>
    <string name="reset_wifi_policy_show_dialog_title">Recovery prompt</string>
    <string name="not_ask_again">Not ask again</string>
    <string name="wifi_auto_roam">Auto roam</string>
    <string name="sim_settings_title">SIM cards</string>
    <string name="voice_broadcast_settings">Voice Settings</string>
    <string name="voice_broadcast_settings_tile">Voice broadcast</string>
    <string name="voice_menu">Voice Menu</string>
    <string name="voice_date">Voice Date</string>
    <string name="voice_call">Voice Call</string>
    <string name="voice_contacts">Voice Contacts</string>
    <string name="voice_incall">Voice Incall</string>
    <string name="voice_incall_summary">Speak the contact name and number before incoming call ringing</string>
    <string name="voice_message">Voice Message</string>
    <string name="voice_message_summary">Select the SMS then press OK to speak the SMS content.</string>
    <string name="sim_status_title">SIM status</string>
    <string name="imei_information_title">IMEI information</string>
    <string name="manage_app_settings_category">Apply list classification</string>
    <string name="software_version">Software Version</string>
    <string name="featurebar_display">Feature bar displays as icon</string>
    <string name="duoqin_chat_settings">Duoqin Chat</string>
    <string name="duoqin_chat_summary">Allow sending and receiving messages</string>
    <string name="duoqin_chat_notification_settings">New Message notification</string>
    <string name="duoqin_chat_notification_summary">Send a notification when a new message is received</string>
    <string name="duoqin_chat_notification_sound_settings">New message tone</string>
    <string name="duoqin_chat_notification_sound_summary">Play alert tone when receive new message notifications</string>
    <string name="bind">Bind</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="flash_light">FlashLight</string>
    <string name="voice_setting_title">Voice call settings</string>
    <string name="video_setting_title">Video call settings</string>
    <string name="mms_setting_title">MMS and SMS settings</string>
    <string name="sim_reply_setting">Sim reply settings</string>
    <string name="reply_message_setting">Reply MMS or SMS</string>
    <string name="data_title">Data connection settings</string>
    <string name="sel_sub_title">Standby settings</string>
    <string name="sel_sub_summary">To enable or disable the SIM card</string>
    <string name="agps_supl_manual_settings">SUPL server manual setting</string>
    <string name="agps_supl_manual_settings_summary">Manual set SUPL server and port</string>
    <string name="gps_location_suplserver">Server</string>
    <string name="agps_setting">Agps Setting</string>
    <string name="wifi_alarm_category_title">Wi-Fi alarm setting</string>
    <string name="wifi_connect_alarm_title">Automatically connect Wi-Fi</string>
    <string name="wifi_disconnect_alarm_title">Automatically disconnect Wi-Fi</string>
    <string name="wifi_alarm_time_title">Set Time</string>
    <string name="select_primary_card">Select primary card</string>
    <string name="sim_pref_divider">Preferred SIM for</string>
    <string name="calls_title">Calls</string>
    <string name="sms_messages_title">SMS messages</string>
</resources>