<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/storage_title_usb"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_storage" android:key="usb_storage" android:summary="@string/usb_storage_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_tethering_button_text" android:key="usb_tether_settings" />
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_mtp_title" android:key="usb_mtp" android:summary="@string/usb_mtp_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_ptp_title" android:key="usb_ptp" android:summary="@string/usb_ptp_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_charge_only" android:key="usb_charge_only" android:summary="@string/usb_charge_only_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_virtual_drive" android:key="usb_virtual_drive" android:summary="@string/usb_virtual_drive_summary" />
    <CheckBoxPreference android:title="@string/remember_choice" android:key="remember_choice" android:summary="@string/remember_choice_summary" />
</PreferenceScreen>
