<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/about_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.sprd.settings.RecoverySystemUpdatePreference android:title="@string/recovery_update_title" android:key="RecoverySystemUpdate" android:dialogTitle="@string/recovery_update_title" />
    <PreferenceScreen android:title="@string/system_update_settings_list_item_title" android:key="system_update_settings" android:summary="@string/system_update_settings_list_item_summary">
        <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/additional_system_update_settings_list_item_title" android:key="additional_system_update_settings">
        <intent android:targetPackage="@string/additional_system_update" android:action="android.intent.action.MAIN" android:targetClass="@string/additional_system_update_menu" />
    </PreferenceScreen>
    <PreferenceScreen android:title="System Update" android:key="fota_update_settings">
        <intent android:targetPackage="com.adups.fota" android:targetClass="com.adups.fota.GoogleOtaClient" />
    </PreferenceScreen>
    <PreferenceScreen android:title="System Update" android:key="rsfota_update_settings">
        <intent android:targetPackage="com.redstone.ota.ui" android:action="android.intent.action.MAIN" android:targetClass="com.redstone.ota.ui.activity.RsMainActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/device_status" android:key="status_info" android:summary="@string/device_status_summary" />
    <PreferenceScreen android:title="@string/legal_information" android:key="container">
        <PreferenceScreen android:title="@string/copyright_title" android:key="copyright">
            <intent android:action="android.settings.COPYRIGHT" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/license_title" android:key="license">
            <intent android:action="android.settings.LICENSE" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/terms_title" android:key="terms">
            <intent android:action="android.settings.TERMS" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_safetylegal_title" android:key="safetylegal">
        <intent android:action="android.settings.SAFETY" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/regulatory_information" android:key="regulatory_info">
        <intent android:action="android.settings.SHOW_REGULATORY_INFO" />
    </PreferenceScreen>
    <Preference android:title="@string/model_number" android:key="device_model" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/firmware_version" android:key="firmware_version" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/fcc_equipment_id" android:key="fcc_equipment_id" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/software_version" android:key="software_number" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/hardware_version" android:key="hardware_number" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
    <Preference android:title="@string/selinux_status" android:key="selinux_status" android:summary="@string/selinux_status_enforcing" style="preferenceInformationStyle" />
    <Preference android:title="@string/hardware_version" android:key="hardware_version" android:summary="@string/device_info_default" style="preferenceInformationStyle" />
</PreferenceScreen>
