<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/device_status"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/battery_status_title" android:key="battery_status" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/battery_level_title" android:key="battery_level" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_ims_registration" android:key="ims_registration" android:summary="@string/status_ims_not_registered" style="?android:attr/preferenceInformationStyle" />
    <PreferenceScreen android:persistent="false" android:title="@string/sim_status_title" android:key="sim_status" />
    <PreferenceScreen android:persistent="false" android:title="@string/imei_information_title" android:key="imei_info">
        <intent android:targetPackage="com.android.settings" android:targetClass="com.android.settings.deviceinfo.ImeiInformation" />
    </PreferenceScreen>
    <Preference android:persistent="false" android:title="@string/wifi_advanced_ip_address_title" android:key="wifi_ip_address" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_wifi_mac_address" android:key="wifi_mac_address" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_bt_address" android:key="bt_address" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_serial_number" android:key="serial_number">
        <intent android:targetPackage="com.spreadtrum.android.eng" android:action="com.spreadtrum.android.eng.PhaseCheck" android:targetClass="com.spreadtrum.android.eng.PhaseCheck" />
    </Preference>
    <Preference android:persistent="false" android:title="@string/status_up_time" android:key="up_time" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_wimax_mac_address" android:key="wimax_mac_address" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
</PreferenceScreen>
