<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/applications_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/manage_app_settings_category" android:key="manage_app_settings_category">
        <PreferenceScreen android:title="@string/filter_apps_third_party" android:key="filter_apps_third_party" />
        <PreferenceScreen android:title="@string/filter_apps_onsdcard" android:key="filter_apps_onsdcard" />
        <PreferenceScreen android:title="@string/filter_apps_running" android:key="filter_apps_running" />
        <PreferenceScreen android:title="@string/filter_apps_all" android:key="filter_apps_all" />
        <PreferenceScreen android:title="@string/filter_apps_disabled" android:key="filter_apps_disabled" />
    </PreferenceCategory>
</PreferenceScreen>
