<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/sim_settings_title" android:key="sim_cards"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/sim_pref_divider" android:key="sim_activities">
        <Preference android:layout="@layout/sim_preference_ex" android:title="@string/calls_title" android:key="sim_calls" android:order="1" />
        <Preference android:layout="@layout/sim_preference_ex" android:title="@string/sms_messages_title" android:key="sim_sms" android:order="2" />
        <Preference android:layout="@layout/sim_preference_ex" android:title="@string/select_primary_card" android:key="sim_primary_card" android:order="3" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reply_message_setting" android:key="sim_reply_setting">
        <CheckBoxPreference android:title="@string/sim_reply_setting" android:key="reply_message_setting" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
