<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:id="@id/no_ask" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/not_ask_again" />
    <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip">
        <Button android:id="@id/no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/no" android:layout_weight="1.0" />
        <Button android:id="@id/yes" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/yes" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
